--- a/src/app/shared/designSystem/variables/_modal.scss
+++ b/src/app/shared/designSystem/variables/_modal.scss
@@ -3,3 +3,5 @@ $modal-padding: $space-12;
 $modal-index: 2001;
 $modal-bg: var(--brand-bg-color);
 $modal-max-width: 50%;
+$modal-transition: var(--brand-fade-animation-transition);
+$modal-border-radius: var(--brand-border-radius-lg);
