--- a/src/app/shared/designSystem/variables/_spacings.scss
+++ b/src/app/shared/designSystem/variables/_spacings.scss
@@ -13,4 +13,7 @@ $space-32: $space-unit * 4; //    32px
 $space-40: $space-unit * 5; //    40px
 $space-48: $space-unit * 6; //    48px
 $space-52: $space-unit * 6.5; //  52px
+$space-64: $space-unit * 8; //  64px
 $space-84: $space-unit * 10.5; // 84px
+$space-128: $space-unit * 16; // 128px
+$space-192: $space-unit * 24; // 192px
