--- a/src/app/shared/designSystem/variables/_tooltip.scss
+++ b/src/app/shared/designSystem/variables/_tooltip.scss
@@ -11,4 +11,4 @@ $tooltip-color: var(--brand-text-color-inverse);
 $tooltip-padding: 0 $space-4;
 $tooltip-shadow: none;
 $tooltip-highlight-color: $tooltip-bg;
-$tooltip-border-radius: var(--brand-border-radius);
+$tooltip-border-radius: var(--brand-border-radius-sm);
