--- a/src/app/shared/designSystem/variables/_sidebar.scss
+++ b/src/app/shared/designSystem/variables/_sidebar.scss
@@ -15,11 +15,11 @@ $sidebar-hamburger-open-color: $sidebar-color;
 
 $sidebar-group-margin: 0 0 $space-48 0;
 $sidebar-group-font-weight: $font-weight-light;
-$sidebar-group-font-size: $font-size;
+$sidebar-group-font-size: $font-size-md;
 $sidebar-group-border-bottom: 1px solid var(--brand-border-color);
 
 $sidebar-group-item-font-weight: $font-weight-light;
-$sidebar-group-item-font-size: $font-size;
+$sidebar-group-item-font-size: $font-size-md;
 $sidebar-group-item-color: $sidebar-color;
 $sidebar-group-item-hover-color: $sidebar-color;
 $sidebar-group-item-hover-bg: var(--brand-bg-color-variant);
