--- a/src/app/shared/designSystem/themes/dark.scss
+++ b/src/app/shared/designSystem/themes/dark.scss
@@ -28,21 +28,27 @@
   /* Background Colors */
   --brand-bg-color: #{palette-color-level('grey', 90)};
   --brand-bg-color-variant: #{palette-color-level('grey', 70)};
+
+  /* Background Colors Inverse */
   --brand-bg-color-inverse: #{palette-color-level('grey', 30)};
   --brand-bg-color-variant-inverse: #{palette-color-level('grey', 70)};
 
   /* Text Colors */
   --brand-text-color: #{palette-color-level('grey', 10)};
   --brand-text-secondary-color: #{palette-color-level('grey', 50)};
+  --brand-text-tertiary-color: #{palette-color-level('grey', 90)};
+
+  /* Text Colors Inverse */
   --brand-text-color-inverse: #{palette-color-level('grey', 100)};
   --brand-text-secondary-color-inverse: #{palette-color-level('grey', 70)};
+  --brand-text-tertiary-color-inverse: #{palette-color-level('grey', 30)};
 
   /* Link Color */
   --brand-link-color: #{palette-color-level('green', 50)};
   --brand-link-hover-color: #{palette-color-level('green', 70)};
 
   /* Borders */
-  --brand-border-color: #{palette-color-level('grey', 90)};
+  --brand-border-color: #{palette-color-level('grey', 70)};
   --brand-border-color-inverse: #{palette-color-level('grey', 50)};
   --brand-border-radius-sm: #{$space-4};
   --brand-border-radius-md: #{$space-8};
