--- a/src/assets/designSystem/variables/_nav-bar.scss
+++ b/src/assets/designSystem/variables/_nav-bar.scss
@@ -1,13 +1,5 @@
-@include add-theme-variable(
-  nav-bar-color,
-  (
-    'light': var(--brand-text-color),
-    'dark': var(--brand-text-color-inverse),
-  )
-);
-
 $nav-bar-bg: var(--brand-primary);
-$nav-bar-color: var(--nav-bar-color);
+$nav-bar-color: var(--brand-text-color);
 $nav-bar-width: 100%;
 $nav-bar-height: $space-52;
 $nav-bar-padding: $space-12;
