--- a/src/assets/designSystem/variables/_sidebar.scss
+++ b/src/assets/designSystem/variables/_sidebar.scss
@@ -8,7 +8,7 @@ $sidebar-transition: transform var(--brand-transition-duration) ease-in-out;
 $sidebar-width: 300px;
 $sidebar-height: 100%;
 $sidebar-hamburger-bg: transparent;
-$sidebar-hamburger-color: var(--nav-bar-color);
+$sidebar-hamburger-color: var(--brand-text-color);
 $sidebar-hamburger-open-bg: transparent;
 $sidebar-hamburger-open-color: $sidebar-color;
 
