--- a/.vuesion/generators/component/component.vue.hbs
+++ b/.vuesion/generators/component/component.vue.hbs
@@ -5,18 +5,20 @@
 </template>
 
 <script lang="ts">
-export default {
+import { defineComponent } from "@vue/composition-api";
+
+export default defineComponent({
   name: '{{ properCase componentName }}',
   components: {},
   props: {},
-  data: (): any => ({}),
-  computed: {},
-  methods: {},
-};
+  setup() {
+    return {};
+  },
+});
 </script>
 
 <style lang="scss" module>
-@import '~@/app/shared/design-system';
+@import '~@/assets/design-system';
 
 .{{ camelCase componentName }} {
   // this class is only applied if you add css properties
