--- a/src/assets/designSystem/components/atoms/_select.scss
+++ b/src/assets/designSystem/components/atoms/_select.scss
@@ -1,6 +1,6 @@
-$select-bg: var(--brand-bg-color);
+$select-bg: var(--brand-primary-bg-color);
 $select-padding: $space-8 0;
-$select-color: var(--brand-text-color);
+$select-color: var(--brand-primary-text-color);
 $select-font-family: $font-family;
 $select-font-size: $font-size-md;
 $select-font-weight: $font-weight-light;
