--- a/src/assets/designSystem/components/organisms/_nav-bar.scss
+++ b/src/assets/designSystem/components/organisms/_nav-bar.scss
@@ -1,5 +1,5 @@
 $nav-bar-bg: var(--brand-primary);
-$nav-bar-color: var(--brand-text-color);
+$nav-bar-color: var(--brand-primary-text-color);
 $nav-bar-width: 100%;
 $nav-bar-height: $space-52;
 $nav-bar-padding: $space-12;
