--- a/src/assets/designSystem/components/atoms/_badge.scss
+++ b/src/assets/designSystem/components/atoms/_badge.scss
@@ -1,8 +1,8 @@
 @include add-theme-variable(
   button-color,
   (
-    'light': var(--brand-text-color),
-    'dark': var(--brand-text-color-inverse),
+    'light': var(--brand-primary-text-color),
+    'dark': var(--brand-primary-text-color-inverse),
   )
 );
 $badge-padding: $space-4 $space-8;
@@ -17,7 +17,7 @@ $badge-outlined-border-width: 1px;
 $badge-variations: (
   'default': (
     'bg': var(--brand-default),
-    'color': var(--brand-text-color-inverse),
+    'color': var(--brand-primary-text-color-inverse),
   ),
   'primary': (
     'bg': var(--brand-primary),
@@ -37,6 +37,6 @@ $badge-variations: (
   ),
   'danger': (
     'bg': var(--brand-danger),
-    'color': var(--brand-text-color-inverse),
+    'color': var(--brand-primary-text-color-inverse),
   ),
 );
