--- a/src/assets/designSystem/components/molecules/_card.scss
+++ b/src/assets/designSystem/components/molecules/_card.scss
@@ -1,8 +1,8 @@
-$card-bg: var(--brand-bg-color-variant);
+$card-bg: var(--brand-secondary-bg-color);
 $card-shadow: none;
-$card-border: 1px solid var(--brand-border-color);
+$card-border: 1px solid var(--brand-primary-border-color);
 $card-border-radius: 0;
-$card-color: var(--brand-text-color);
+$card-color: var(--brand-primary-text-color);
 
 $card-header-image-size: $space-40;
 $card-header-image-border-radius: 50%;
@@ -10,7 +10,7 @@ $card-header-title-font-size: $font-size-md;
 $card-header-title-font-weight: $font-weight-regular;
 $card-header-subtitle-font-size: $font-size-md;
 $card-header-subtitle-font-weight: $font-weight-light;
-$card-header-subtitle-color: var(--brand-text-secondary-color);
+$card-header-subtitle-color: var(--brand-secondary-text-color);
 
 $card-body-padding: 0 $space-16 $space-8 $space-16;
 $card-body-font-size: inherit;
