--- a/src/assets/designSystem/components/molecules/_notification-stack.scss
+++ b/src/assets/designSystem/components/molecules/_notification-stack.scss
@@ -5,9 +5,9 @@ $notifications-max-width: $space-84 * 4;
 $notification-padding: $space-16 $space-40 $space-16 $space-16;
 $notification-shadow: none;
 $notification-max-height: $space-84;
-$notification-close-bg: var(--brand-bg-color);
+$notification-close-bg: var(--brand-primary-bg-color);
 $notification-close-width: $space-40;
 $notification-close-cross-color: var(--brand-secondary);
 
-$notification-default-bg: var(--brand-bg-color-variant);
-$notification-default-border: 1px solid var(--brand-border-color);
+$notification-default-bg: var(--brand-secondary-bg-color);
+$notification-default-border: 1px solid var(--brand-primary-border-color);
