--- a/src/assets/designSystem/components/molecules/_pagination.scss
+++ b/src/assets/designSystem/components/molecules/_pagination.scss
@@ -2,8 +2,8 @@ $pagination-padding: 0;
 $pagination-label-padding: $space-8 $space-12;
 $pagination-label-min-width: $space-84;
 $pagination-button-size: $space-40;
-$pagination-button-bg: var(--brand-bg-color-variant);
+$pagination-button-bg: var(--brand-secondary-bg-color);
 $pagination-button-shadow: none;
-$pagination-button-border: 1px solid var(--brand-border-color);
+$pagination-button-border: 1px solid var(--brand-primary-border-color);
 $pagination-arrow-color: var(--brand-secondary);
-$pagination-arrow-disabled-color: var(--brand-border-color);
+$pagination-arrow-disabled-color: var(--brand-primary-border-color);
