--- a/src/assets/designSystem/components/organisms/_accordion.scss
+++ b/src/assets/designSystem/components/organisms/_accordion.scss
@@ -1,6 +1,6 @@
-$accordion-item-header-bg: var(--brand-bg-color-variant);
+$accordion-item-header-bg: var(--brand-secondary-bg-color);
 $accordion-item-header-shadow: none;
 $accordion-item-header-padding: $space-8 $space-12;
-$accordion-item-header-border: 1px solid var(--brand-border-color);
+$accordion-item-header-border: 1px solid var(--brand-primary-border-color);
 $accordion-item-header-arrow-color: var(--brand-secondary);
 $accordion-item-body-padding: $accordion-item-header-padding;
