--- a/src/assets/designSystem/components/organisms/_autocomplete.scss
+++ b/src/assets/designSystem/components/organisms/_autocomplete.scss
@@ -1,9 +1,9 @@
-$autocomplete-bg: var(--brand-bg-color);
+$autocomplete-bg: var(--brand-primary-bg-color);
 $autocomplete-padding: 0;
 $autocomplete-shadow: none;
-$autocomplete-border: 1px solid var(--brand-border-color);
+$autocomplete-border: 1px solid var(--brand-primary-border-color);
 
 $autocomplete-item-padding: $space-8 $space-12;
-$autocomplete-item-border: 1px solid var(--brand-border-color);
-$autocomplete-item-selected-bg: var(--brand-bg-color-variant);
-$autocomplete-item-selected-color: var(--brand-text-color);
+$autocomplete-item-border: 1px solid var(--brand-primary-border-color);
+$autocomplete-item-selected-bg: var(--brand-secondary-bg-color);
+$autocomplete-item-selected-color: var(--brand-primary-text-color);
