--- a/src/assets/designSystem/components/organisms/_data-table.scss
+++ b/src/assets/designSystem/components/organisms/_data-table.scss
@@ -1,18 +1,18 @@
 $data-table-width: 100%;
-$data-table-no-results-border: 1px solid var(--brand-border-color);
+$data-table-no-results-border: 1px solid var(--brand-primary-border-color);
 $data-table-no-results-padding: $space-84 0;
 $data-table-no-results-opacity: 0.5;
 $data-table-min-width: 600px;
 
-$data-table-header-border: 1px solid var(--brand-border-color);
-$data-table-header-bg: var(--brand-bg-color);
+$data-table-header-border: 1px solid var(--brand-primary-border-color);
+$data-table-header-bg: var(--brand-primary-bg-color);
 $data-table-header-font-weight: $font-weight-regular;
 $data-table-header-column-padding: $space-8 $space-12;
-$data-table-header-icon-color: var(--brand-text-secondary-color);
+$data-table-header-icon-color: var(--brand-secondary-text-color);
 $data-table-header-icon-hover-color: var(--brand-secondary);
 
 $data-table-row-border: $data-table-no-results-border;
-$data-table-row-hover-bg: var(--brand-bg-color-variant);
-$data-table-row-hover-color: var(--brand-text-color);
+$data-table-row-hover-bg: var(--brand-secondary-bg-color);
+$data-table-row-hover-color: var(--brand-primary-text-color);
 
 $data-table-row-column-padding: $space-8 $space-12;
