refactor(design-system): update color-tokens and text-styles (#543)
closes #513

--- a/.vuesion/generators/vuex-module/mutations.ts.hbs
+++ b/.vuesion/generators/vuex-module/mutations.ts.hbs
@@ -1,5 +1,5 @@
+import { I{{ properCase singularName }} } from '@/interfaces/I{{ properCase singularName }}';
 import { I{{ properCase singularName }}State } from './state';
-import { I{{ properCase singularName }} } from './I{{ properCase singularName }}';
 
 export interface I{{ properCase singularName }}Mutations {
   SET_{{ constantCase pluralName }}(state: I{{ properCase singularName }}State, {{ camelCase pluralName }}: I{{ properCase singularName }}[]): void;
