--- a/.vuesion/generators/vuex-module/state.ts.hbs
+++ b/.vuesion/generators/vuex-module/state.ts.hbs
@@ -1,4 +1,4 @@
-import { I{{ properCase singularName }} } from './I{{ properCase singularName }}';
+import { I{{ properCase singularName }} } from '@/interfaces/I{{ properCase singularName }}';
 
 export interface I{{ properCase singularName }}State {
   /**
