--- a/.vuesion/storybook/_theme.scss
+++ b/.vuesion/storybook/_theme.scss
@@ -2,12 +2,12 @@
 
 :export {
   base: 'dark';
-  colorPrimary: palette-color-level('coral', 50);
-  colorSecondary: palette-color-level('blue', 50);
+  colorPrimary: palette-color-level('primary', 6);
+  colorSecondary: palette-color-level('primary', 5);
   // UI
-  appBg: palette-color-level('grey', 90);
-  appContentBg: palette-color-level('grey', 10);
-  appBorderColor: palette-color-level('grey', 70);
+  appBg: palette-color-level('neutral', 9);
+  appContentBg: palette-color-level('neutral', 1);
+  appBorderColor: palette-color-level('neutral', 7);
   appBorderRadius: $space-4;
 
   // Typography
@@ -15,17 +15,17 @@
   fontCode: 'Courier New';
 
   // Text colors
-  textColor: palette-color-level('grey', 10);
-  textInverseColor: palette-color-level('grey', 100);
+  textColor: palette-color-level('neutral', 1);
+  textInverseColor: palette-color-level('neutral', 10);
 
   // Toolbar default and active colors
-  barTextColor: palette-color-level('grey', 10);
-  barSelectedColor: palette-color-level('grey', 70);
-  barBg: palette-color-level('grey', 100);
+  barTextColor: palette-color-level('neutral', 1);
+  barSelectedColor: palette-color-level('neutral', 7);
+  barBg: palette-color-level('neutral', 10);
 
   // Form colors
-  inputBg: palette-color-level('grey', 90);
-  inputBorder: palette-color-level('grey', 70);
-  inputTextColor: palette-color-level('grey', 10);
+  inputBg: palette-color-level('neutral', 9);
+  inputBorder: palette-color-level('neutral', 7);
+  inputTextColor: palette-color-level('neutral', 1);
   inputBorderRadius: $space-4;
 }
