--- a/src/assets/designSystem/_color-palette.scss
+++ b/src/assets/designSystem/_color-palette.scss
@@ -1,57 +1,65 @@
 $palette-colors: (
-  'coral-10': #fff8fc,
-  'coral-30': #eab3c2,
-  'coral-50': #ed547d,
-  'coral-70': #cd235b,
-  'coral-90': #710e2f,
-  'coral-100': #1d020b,
-  'blue-10': #f2f7ff,
-  'blue-30': #bbd7fd,
-  'blue-50': #5792f5,
-  'blue-70': #134ee4,
-  'blue-90': #0018c7,
-  'blue-100': #000087,
-  'purple-10': #f4f0fa,
-  'purple-30': #c7acec,
-  'purple-50': #9b6bdb,
-  'purple-70': #6f19e1,
-  'purple-90': #4e04af,
-  'purple-100': #28005c,
-  'green-10': #e3fcef,
-  'green-30': #b3e5c9,
-  'green-50': #81c19d,
-  'green-70': #02ac5a,
-  'green-90': #005c36,
-  'green-100': #00301c,
-  'grey-10': #ffffff,
-  'grey-30': #edeff2,
-  'grey-50': #c4cdd5,
-  'grey-70': #8a92a3,
-  'grey-90': #393d47,
-  'grey-100': #131416,
-  'red-10': #fdf2f2,
-  'red-30': #f2bfbf,
-  'red-50': #da7275,
-  'red-70': #d7191f,
-  'red-90': #800000,
-  'red-100': #3c0c0c,
-  'yellow-10': #faf5eb,
-  'yellow-30': #f7d287,
-  'yellow-50': #e8c764,
-  'yellow-70': #ecb309,
-  'yellow-90': #6b4700,
-  'yellow-100': #382500,
-  'neutral-1-0': #ffffff,
-  'neutral-1-10': #f2f4f8,
-  'neutral-1-20': #dde1e6,
-  'neutral-1-30': #c1c7cd,
-  'neutral-1-40': #a2a9b0,
-  'neutral-1-50': #878d96,
-  'neutral-1-60': #70767d,
-  'neutral-1-70': #4d5358,
-  'neutral-1-80': #343a3f,
-  'neutral-1-90': #21272a,
-  'neutral-1-100': #121619,
+  'primary-1': #edf5ff,
+  'primary-2': #d0e2ff,
+  'primary-3': #a6c8ff,
+  'primary-4': #78a9ff,
+  'primary-5': #4589ff,
+  'primary-6': #0f62fe,
+  'primary-7': #0043ce,
+  'primary-8': #002d9c,
+  'primary-9': #001d6c,
+  'primary-10': #001141,
+  'neutral-0': #fff,
+  'neutral-1': #f2f4f8,
+  'neutral-2': #dde1e6,
+  'neutral-3': #c1c7cd,
+  'neutral-4': #a2a9b0,
+  'neutral-5': #878d96,
+  'neutral-6': #70767d,
+  'neutral-7': #4d5358,
+  'neutral-8': #343a3f,
+  'neutral-9': #21272a,
+  'neutral-10': #121619,
+  'danger-1': #fff1f1,
+  'danger-2': #ffd7d9,
+  'danger-3': #ffb3b8,
+  'danger-4': #ff8389,
+  'danger-5': #fa4d56,
+  'danger-6': #da1e28,
+  'danger-7': #a2191f,
+  'danger-8': #750e13,
+  'danger-9': #520408,
+  'danger-10': #2d0709,
+  'warning-1': #fff9e5,
+  'warning-2': #fff0ba,
+  'warning-3': #ffe482,
+  'warning-4': #ffd333,
+  'warning-5': #e8b911,
+  'warning-6': #c39900,
+  'warning-7': #9a7900,
+  'warning-8': #6d5500,
+  'warning-9': #493901,
+  'warning-10': #272006,
+  'success-1': #defbe6,
+  'success-2': #a7f0ba,
+  'success-3': #6fdc8c,
+  'success-4': #42be65,
+  'success-5': #24a148,
+  'success-6': #198038,
+  'success-7': #0e6027,
+  'success-8': #044317,
+  'success-9': #022d0d,
+  'success-10': #071908,
+  'info-1': #cdf7f7,
+  'info-2': #99f0ee,
+  'info-3': #5fd9d7,
+  'info-4': #47c1bf,
+  'info-5': #37a4a2,
+  'info-6': #2a7b7e,
+  'info-7': #235658,
+  'info-8': #1d4044,
+  'info-9': #102a2d,
+  'info-10': #0b2022,
 );
 
 @function palette-color($key) {
