--- a/src/assets/designSystem/components/organisms/_calendar.scss
+++ b/src/assets/designSystem/components/organisms/_calendar.scss
@@ -28,8 +28,8 @@ $calendar-day-hover: var(--brand-secondary-bg-color);
 
 $calendar-current-day-bg: var(--brand-primary);
 $calendar-current-day-color: var(--calendar-a11y-color);
-$calendar-current-day-font-weight: $font-weight-light;
+$calendar-current-day-font-weight: $font-weight-regular;
 
 $calendar-selected-day-bg: var(--brand-secondary);
 $calendar-selected-day-color: var(--calendar-a11y-color);
-$calendar-selected-day-font-weight: $font-weight-light;
+$calendar-selected-day-font-weight: $font-weight-regular;
