--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -16,8 +16,8 @@ code {
 // vue-icon global style
 i {
   display: inline-flex;
-  height: $font-size-md;
-  width: $font-size-md;
+  height: $text-2;
+  width: $text-2;
   fill: var(--brand-high-emphasis-text-color);
   justify-content: center;
   align-items: center;
