--- a/.vuesion/generators/page/page.vue.hbs
+++ b/.vuesion/generators/page/page.vue.hbs
@@ -5,7 +5,7 @@
 
       <vue-grid-row>
         <vue-grid-item>
-          <vue-headline level="1">{{ properCase componentName }}</vue-headline>
+          <vue-text appearance="h1" as="h1">{{ properCase componentName }}</vue-text>
         </vue-grid-item>
       </vue-grid-row>
     </vue-grid>
@@ -18,16 +18,16 @@ import VueGrid from '@/components/organisms/VueGrid/VueGrid.vue';
 import VueBreadcrumb from '@/components/molecules/VueBreadcrumb/VueBreadcrumb.vue';
 import VueGridRow from '@/components/organisms/VueGrid/VueGridRow/VueGridRow.vue';
 import VueGridItem from '@/components/organisms/VueGrid/VueGridColumn/VueGridColumn.vue';
-import VueHeadline from '@/components/atoms/VueHeadline/VueHeadline.vue';
+import VueText from '@/components/atoms/VueText/VueText.vue';
 
 export default defineComponent({
-  name: '{{ properCase componentName }}',
+  name: '{{ properCase componentName }}Page',
   components: {
     VueGrid,
     VueBreadcrumb,
     VueGridRow,
     VueGridItem,
-    VueHeadline,
+    VueText,
   },
   setup() {
     useMeta({ title: '{{ properCase componentName }}' });
