--- a/.vuesion/generators/vuex-module/actions.spec.ts.hbs
+++ b/.vuesion/generators/vuex-module/actions.spec.ts.hbs
@@ -1,43 +1,54 @@
-import { ActionContext, Commit, Dispatch } from 'vuex';
-import MockAdapter from 'axios-mock-adapter';
-import { {{ properCase singularName }}Actions } from './actions';
-import { {{ properCase singularName }}DefaultState, I{{ properCase singularName }}State } from './state';
-import { IState } from '@/store/IState';
-import { HttpService } from '@/plugins/http-service/HttpService';
+import Vuex, { Store } from 'vuex';
+import { {{ properCase singularName }}DefaultState } from '@/store/{{ camelCase singularName }}/state';
+import { IState } from '@/interfaces/IState';
+import { I{{ properCase singularName }} } from '@/interfaces/I{{ properCase singularName }}';
+import { {{ properCase singularName }}Actions } from '@/store/{{ camelCase singularName }}/actions';
+import { {{ properCase singularName }}Mutations } from '@/store/{{ camelCase singularName }}/mutations';
+import { {{ properCase singularName }}Getters } from '@/store/{{ camelCase singularName }}/getters';
+import { AxiosMock, getAxiosMock } from '@/test/test-utils';
 
 describe('{{ properCase singularName }}Actions', () => {
-  let testContext: ActionContext<I{{ properCase singularName }}State, IState>;
-  let mockAxios: MockAdapter;
+  let store: Store<IState>;
+  let axiosMock: AxiosMock;
+  let fixture: I{{ properCase singularName }};
+
+  const {{ properCase singularName }}Module = {
+    namespaced: true,
+    state: () => {{ properCase singularName }}DefaultState(),
+    mutations: {{ properCase singularName }}Mutations,
+    actions: {{ properCase singularName }}Actions,
+    getters: {{ properCase singularName }}Getters,
+  };
 
   beforeEach(() => {
-    testContext = {
-      dispatch: jest.fn() as Dispatch,
-      commit: jest.fn() as Commit,
-      state: {{ properCase singularName }}DefaultState(),
-    } as ActionContext<I{{ properCase singularName }}State, IState>;
+    store = new Vuex.Store({
+      modules: {
+        {{ camelCase singularName }}: {{ properCase singularName }}Module,
+      },
+    } as any);
 
-    mockAxios = new MockAdapter(HttpService);
+    axiosMock = getAxiosMock();
+
+    store.$axios = axiosMock;
+    store.commit = jest.fn();
+
+    fixture = { id: '1' };
   });
 
-  describe('fetch{{ properCase pluralName }}', () => {
+  describe('fetch{{ properCase singularName }}s', () => {
     test('it should call SET_{{ constantCase pluralName }} on success', async () => {
-      const commitMock: jest.Mock = testContext.commit as jest.Mock;
-      const expected = {};
+      axiosMock.onGet('/{{ camelCase pluralName }}').reply(200, fixture);
 
-      mockAxios.onGet('/{{ pluralName }}').reply(200, expected);
+      await store.dispatch('{{ camelCase singularName }}/fetch{{ properCase singularName }}s');
 
-      await {{ properCase singularName }}Actions.fetch{{ properCase pluralName }}(testContext);
-
-      const actual = commitMock.mock.calls[0];
-
-      expect(actual).toEqual(['SET_{{ constantCase pluralName }}', expected]);
+      expect(store.commit).toHaveBeenCalledWith('{{ camelCase singularName }}/SET_{{ constantCase pluralName }}', fixture, undefined);
     });
 
     test('it should throw an error on failure', async () => {
-      mockAxios.onGet('/{{ pluralName }}').reply(500);
+      axiosMock.onGet('/{{ camelCase pluralName }}').reply(500);
 
       try {
-        await {{ properCase singularName }}Actions.fetch{{ properCase pluralName }}(testContext);
+        await store.dispatch('{{ camelCase singularName }}/fetch{{ properCase singularName }}s');
       } catch (e) {
         expect(e.message).toEqual('Request failed with status code 500');
       }
@@ -46,23 +57,18 @@ describe('{{ properCase singularName }}Actions', () => {
 
   describe('fetch{{ properCase singularName }}', () => {
     test('it should call SET_CURRENT_{{ constantCase singularName }} on success', async () => {
-      const commitMock: jest.Mock = testContext.commit as jest.Mock;
-      const expected = {};
+      axiosMock.onGet('/{{ camelCase pluralName }}/1').reply(200, fixture);
 
-      mockAxios.onGet('/{{ pluralName }}/1').reply(200, expected);
+      await store.dispatch('{{ camelCase singularName }}/fetch{{ properCase singularName }}', '1');
 
-      await {{ properCase singularName }}Actions.fetch{{ properCase singularName }}(testContext, '1');
-
-      const actual = commitMock.mock.calls[0];
-
-      expect(actual).toEqual(['SET_CURRENT_{{ constantCase singularName }}', expected]);
+      expect(store.commit).toHaveBeenCalledWith('{{ camelCase singularName }}/SET_CURRENT_{{ constantCase singularName }}', fixture, undefined);
     });
 
     test('it should throw an error on failure', async () => {
-      mockAxios.onGet('/{{ pluralName }}/1').reply(500);
+      axiosMock.onGet('/{{ camelCase pluralName }}/1').reply(500);
 
       try {
-        await {{ properCase singularName }}Actions.fetch{{ properCase singularName }}(testContext, '1');
+        await store.dispatch('{{ camelCase singularName }}/fetch{{ properCase singularName }}', '1');
       } catch (e) {
         expect(e.message).toEqual('Request failed with status code 500');
       }
@@ -71,23 +77,18 @@ describe('{{ properCase singularName }}Actions', () => {
 
   describe('create{{ properCase singularName }}', () => {
     test('it should call ADD_{{ constantCase singularName }} on success', async () => {
-      const commitMock: jest.Mock = testContext.commit as jest.Mock;
-      const expected = {};
+      axiosMock.onPost('/{{ camelCase pluralName }}').reply(200, fixture);
 
-      mockAxios.onPost('/{{ pluralName }}').reply(200, expected);
+      await store.dispatch('{{ camelCase singularName }}/create{{ properCase singularName }}', fixture);
 
-      await {{ properCase singularName }}Actions.create{{ properCase singularName }}(testContext, expected);
-
-      const actual = commitMock.mock.calls[0];
-
-      expect(actual).toEqual(['ADD_{{ constantCase singularName }}', expected]);
+      expect(store.commit).toHaveBeenCalledWith('{{ camelCase singularName }}/ADD_{{ constantCase singularName }}', fixture, undefined);
     });
 
     test('it should throw an error on failure', async () => {
-      mockAxios.onPost('/{{ pluralName }}').reply(500);
+      axiosMock.onPost('/{{ camelCase pluralName }}').reply(500);
 
       try {
-        await {{ properCase singularName }}Actions.create{{ properCase singularName }}(testContext, {});
+        await store.dispatch('{{ camelCase singularName }}/create{{ properCase singularName }}', fixture);
       } catch (e) {
         expect(e.message).toEqual('Request failed with status code 500');
       }
@@ -96,23 +97,18 @@ describe('{{ properCase singularName }}Actions', () => {
 
   describe('update{{ properCase singularName }}', () => {
     test('it should call UPDATE_{{ constantCase singularName }} on success', async () => {
-      const commitMock: jest.Mock = testContext.commit as jest.Mock;
-      const expected = { id: '1' };
+      axiosMock.onPut('/{{ camelCase pluralName }}/1').reply(200, fixture);
 
-      mockAxios.onPut('/{{ pluralName }}/1').reply(200, expected);
+      await store.dispatch('{{ camelCase singularName }}/update{{ properCase singularName }}', fixture);
 
-      await {{ properCase singularName }}Actions.update{{ properCase singularName }}(testContext, expected);
-
-      const actual = commitMock.mock.calls[0];
-
-      expect(actual).toEqual(['UPDATE_{{ constantCase singularName }}', expected]);
+      expect(store.commit).toHaveBeenCalledWith('{{ camelCase singularName }}/UPDATE_{{ constantCase singularName }}', fixture, undefined);
     });
 
     test('it should throw an error on failure', async () => {
-      mockAxios.onPut('/{{ pluralName }}/1').reply(500);
+      axiosMock.onPut('/{{ camelCase pluralName }}/1').reply(500);
 
       try {
-        await {{ properCase singularName }}Actions.update{{ properCase singularName }}(testContext, { id: '1' });
+        await store.dispatch('{{ camelCase singularName }}/update{{ properCase singularName }}', fixture);
       } catch (e) {
         expect(e.message).toEqual('Request failed with status code 500');
       }
@@ -121,23 +117,18 @@ describe('{{ properCase singularName }}Actions', () => {
 
   describe('delete{{ properCase singularName }}', () => {
     test('it should call DELETE_{{ constantCase singularName }} on success', async () => {
-      const commitMock: jest.Mock = testContext.commit as jest.Mock;
-      const expected = { id: '1' };
+      axiosMock.onDelete('/{{ camelCase pluralName }}/1').reply(200, fixture);
 
-      mockAxios.onDelete('/{{ pluralName }}/1').reply(200, expected);
+      await store.dispatch('{{ camelCase singularName }}/delete{{ properCase singularName }}', fixture);
 
-      await {{ properCase singularName }}Actions.delete{{ properCase singularName }}(testContext, expected);
-
-      const actual = commitMock.mock.calls[0];
-
-      expect(actual).toEqual(['DELETE_{{ constantCase singularName }}', expected]);
+      expect(store.commit).toHaveBeenCalledWith('{{ camelCase singularName }}/DELETE_{{ constantCase singularName }}', fixture, undefined);
     });
 
     test('it should throw an error on failure', async () => {
-      mockAxios.onDelete('/{{ pluralName }}/1').reply(500);
+      axiosMock.onDelete('/{{ camelCase pluralName }}/1').reply(500);
 
       try {
-        await {{ properCase singularName }}Actions.delete{{ properCase singularName }}(testContext, { id: '1' });
+        await store.dispatch('{{ camelCase singularName }}/delete{{ properCase singularName }}', fixture);
       } catch (e) {
         expect(e.message).toEqual('Request failed with status code 500');
       }
