--- a/.vuesion/generators/vuex-module/getters.ts.hbs
+++ b/.vuesion/generators/vuex-module/getters.ts.hbs
@@ -1,5 +1,5 @@
+import { I{{ properCase singularName }} } from '@/interfaces/I{{ properCase singularName }}';
 import { I{{ properCase singularName }}State } from './state';
-import { I{{ properCase singularName }} } from './I{{ properCase singularName }}';
 
 export interface I{{ properCase singularName }}Getters {
   {{ camelCase pluralName }}(state: I{{ properCase singularName }}State): I{{ properCase singularName }}[];
