--- a/src/assets/designSystem/_spacings.scss
+++ b/src/assets/designSystem/_spacings.scss
@@ -13,7 +13,34 @@ $space-32: $space-unit * 4; //    32px
 $space-40: $space-unit * 5; //    40px
 $space-48: $space-unit * 6; //    48px
 $space-52: $space-unit * 6.5; //  52px
+$space-56: $space-unit * 7; //  56px
 $space-64: $space-unit * 8; //  64px
+$space-72: $space-unit * 9; //  72px
 $space-84: $space-unit * 10.5; // 84px
+$space-96: $space-unit * 2; // 96px
+$space-120: $space-unit * 15; // 120px
 $space-128: $space-unit * 16; // 128px
 $space-192: $space-unit * 24; // 192px
+
+$spacings: (
+  '0': 0,
+  '2': $space-2,
+  '4': $space-4,
+  '8': $space-8,
+  '12': $space-12,
+  '16': $space-16,
+  '20': $space-20,
+  '24': $space-24,
+  '32': $space-32,
+  '40': $space-40,
+  '48': $space-48,
+  '52': $space-52,
+  '56': $space-56,
+  '64': $space-64,
+  '72': $space-72,
+  '84': $space-84,
+  '96': $space-96,
+  '120': $space-120,
+  '128': $space-128,
+  '192': $space-192,
+);
