--- a/src/assets/designSystem/components/atoms/_badge.scss
+++ b/src/assets/designSystem/components/atoms/_badge.scss
@@ -1,12 +1,13 @@
 @include add-theme-variable(
-  button-color,
+  badge-color,
   (
-    'light': var(--brand-high-emphasis-text-color),
-    'dark': var(--brand-high-emphasis-text-color-inverse),
+    'light': var(--brand-high-emphasis-text-color-inverse),
+    'dark': var(--brand-high-emphasis-text-color),
   )
 );
+
 $badge-padding: $space-4 $space-8;
-$badge-font-size: $font-size-sm;
+$badge-font-size: $text-1;
 $badge-line-height: inherit;
 $badge-letter-spacing: inherit;
 $badge-border-radius: var(--brand-border-radius-sm);
@@ -15,28 +16,28 @@ $badge-font-weight: $font-weight-regular;
 $badge-outlined-border-width: 1px;
 
 $badge-variations: (
-  'default': (
-    'bg': var(--brand-default),
-    'color': var(--brand-high-emphasis-text-color-inverse),
-  ),
   'primary': (
     'bg': var(--brand-primary),
-    'color': var(--button-color),
+    'color': var(--badge-color),
   ),
-  'secondary': (
-    'bg': var(--brand-secondary),
-    'color': var(--button-color),
-  ),
-  'success': (
-    'bg': var(--brand-success),
-    'color': var(--button-color),
-  ),
-  'warning': (
-    'bg': var(--brand-warning),
-    'color': var(--button-color),
+  'neutral': (
+    'bg': var(--brand-neutral),
+    'color': var(--badge-color),
   ),
   'danger': (
     'bg': var(--brand-danger),
-    'color': var(--brand-high-emphasis-text-color-inverse),
+    'color': var(--badge-color),
+  ),
+  'warning': (
+    'bg': var(--brand-warning),
+    'color': var(--badge-color),
+  ),
+  'success': (
+    'bg': var(--brand-success),
+    'color': var(--badge-color),
+  ),
+  'info': (
+    'bg': var(--brand-info),
+    'color': var(--badge-color),
   ),
 );
