--- a/src/assets/designSystem/components/atoms/_button.scss
+++ b/src/assets/designSystem/components/atoms/_button.scss
@@ -1,77 +1,52 @@
 @include add-theme-variable(
   button-color,
   (
-    'light': var(--brand-high-emphasis-text-color),
-    'dark': var(--brand-high-emphasis-text-color-inverse),
-  )
-);
-@include add-theme-variable(
-  button-color-inverse,
-  (
     'light': var(--brand-high-emphasis-text-color-inverse),
     'dark': var(--brand-high-emphasis-text-color),
   )
 );
 
-$button-font-family: $font-family;
 $button-padding: 0 $space-16;
 $button-min-width: $space-32;
 $button-height: $space-32;
-$button-font-size: $font-size-md;
-$button-font-weight: $font-weight-bold;
-$button-line-height: $line-height-md;
 $button-border-radius: var(--brand-border-radius-sm);
-$button-text-decoration: none;
-$button-hover-text-decoration: none;
-$button-text-transform: none;
 $button-disabled-opacity: 0.5;
 $button-border-width: 0.2rem;
 $button-icon-size: $space-24;
 
 $button-variations: (
-  'default': (
-    'bg': var(--brand-default),
-    'color': var(--button-color-inverse),
-    'hover-bg': var(--brand-default-hover),
-    'hover-color': var(--button-color),
-    'focus-bg': var(--brand-default-focus),
-    'focus-color': var(--button-color),
-    'active-bg': var(--brand-default-active),
-    'active-color': var(--button-color-inverse),
-    'border': $button-border-width solid var(--brand-default),
-  ),
   'primary': (
     'bg': var(--brand-primary),
-    'color': var(--button-color-inverse),
+    'color': var(--button-color),
     'hover-bg': var(--brand-primary-hover),
     'hover-color': var(--button-color),
     'active-bg': var(--brand-primary-active),
-    'active-color': var(--button-color-inverse),
+    'active-color': var(--button-color),
     'focus-bg': var(--brand-primary-focus),
-    'focus-color': var(--button-color-inverse),
+    'focus-color': var(--button-color),
     'border': $button-border-width solid var(--brand-primary),
   ),
-  'secondary': (
-    'bg': var(--brand-secondary),
-    'color': var(--button-color-inverse),
-    'hover-bg': var(--brand-secondary-hover),
-    'hover-color': var(--button-color),
-    'active-bg': var(--brand-secondary-active),
-    'active-color': var(--button-color-inverse),
-    'focus-bg': var(--brand-secondary-focus),
-    'focus-color': var(--button-color-inverse),
-    'border': $button-border-width solid var(--brand-secondary),
-  ),
-  'success': (
-    'bg': var(--brand-success),
+  'neutral': (
+    'bg': var(--brand-neutral),
     'color': var(--button-color),
-    'hover-bg': var(--brand-success-hover),
+    'hover-bg': var(--brand-neutral-hover),
     'hover-color': var(--button-color),
-    'active-bg': var(--brand-success-active),
-    'active-color': var(--button-color-inverse),
-    'focus-bg': var(--brand-success-focus),
+    'active-bg': var(--brand-neutral-active),
+    'active-color': var(--button-color),
+    'focus-bg': var(--brand-neutral-focus),
     'focus-color': var(--button-color),
-    'border': $button-border-width solid var(--brand-success),
+    'border': $button-border-width solid var(--brand-neutral),
+  ),
+  'danger': (
+    'bg': var(--brand-danger),
+    'color': var(--button-color),
+    'hover-bg': var(--brand-danger-hover),
+    'hover-color': var(--button-color),
+    'active-bg': var(--brand-danger-active),
+    'active-color': var(--button-color),
+    'focus-bg': var(--brand-danger-focus),
+    'focus-color': var(--button-color),
+    'border': $button-border-width solid var(--brand-danger),
   ),
   'warning': (
     'bg': var(--brand-warning),
@@ -79,20 +54,31 @@ $button-variations: (
     'hover-bg': var(--brand-warning-hover),
     'hover-color': var(--button-color),
     'active-bg': var(--brand-warning-active),
-    'active-color': var(--button-color-inverse),
+    'active-color': var(--button-color),
     'focus-bg': var(--brand-warning-focus),
     'focus-color': var(--button-color),
     'border': $button-border-width solid var(--brand-warning),
   ),
-  'danger': (
-    'bg': var(--brand-danger),
-    'color': var(--button-color-inverse),
-    'hover-bg': var(--brand-danger-hover),
+  'success': (
+    'bg': var(--brand-success),
+    'color': var(--button-color),
+    'hover-bg': var(--brand-success-hover),
     'hover-color': var(--button-color),
-    'active-bg': var(--brand-danger-active),
-    'active-color': var(--button-color-inverse),
-    'focus-bg': var(--brand-danger-focus),
-    'focus-color': var(--button-color-inverse),
-    'border': $button-border-width solid var(--brand-danger),
+    'active-bg': var(--brand-success-active),
+    'active-color': var(--button-color),
+    'focus-bg': var(--brand-success-focus),
+    'focus-color': var(--button-color),
+    'border': $button-border-width solid var(--brand-success),
+  ),
+  'info': (
+    'bg': var(--brand-info),
+    'color': var(--button-color),
+    'hover-bg': var(--brand-info-hover),
+    'hover-color': var(--button-color),
+    'active-bg': var(--brand-info-active),
+    'active-color': var(--button-color),
+    'focus-bg': var(--brand-info-focus),
+    'focus-color': var(--button-color),
+    'border': $button-border-width solid var(--brand-info),
   ),
 );
