--- a/src/assets/designSystem/components/atoms/_input.scss
+++ b/src/assets/designSystem/components/atoms/_input.scss
@@ -1,8 +1,8 @@
 $input-label-padding: 0 0 $space-4 0;
 $input-label-color: var(--brand-medium-emphasis-text-color);
-$input-label-font-size: $font-size-sm;
+$input-label-font-size: $text-1;
 $input-label-font-weight: $font-weight-regular;
-$input-label-line-height: $line-height-sm - $space-4;
+$input-label-line-height: $line-height-1 - $space-4;
 
 $input-label-error-color: var(--brand-danger);
 
@@ -10,9 +10,9 @@ $input-padding: ($space-2 + $space-4) $space-8;
 $input-color: var(--brand-high-emphasis-text-color);
 $input-background-color: transparent;
 $input-font-family: $font-family;
-$input-font-size: $font-size-md;
-$input-font-weight: $font-weight-light;
-$input-line-height: $line-height-sm - $space-2;
+$input-font-size: $text-2;
+$input-font-weight: $font-weight-regular;
+$input-line-height: $line-height-1 - $space-2;
 $input-border: 1px solid var(--brand-primary-border-color);
 $input-border-radius: var(--brand-border-radius-sm);
 
@@ -29,8 +29,8 @@ $input-placeholder-color: var(--brand-medium-emphasis-text-color);
 $input-placeholder-error-color: palette-color-level('red', 50);
 
 $input-message-color: var(--brand-low-emphasis-text-color);
-$input-message-font-size: $font-size-sm;
-$input-message-line-height: $line-height-sm - $space-4;
+$input-message-font-size: $text-1;
+$input-message-line-height: $line-height-1 - $space-4;
 $input-message-font-weight: $font-weight-regular;
 $input-message-padding: $space-2 0 $space-4 0;
 
