--- a/src/assets/designSystem/components/atoms/_select.scss
+++ b/src/assets/designSystem/components/atoms/_select.scss
@@ -2,8 +2,8 @@ $select-bg: var(--brand-primary-bg-color);
 $select-padding: $space-8 0;
 $select-color: var(--brand-high-emphasis-text-color);
 $select-font-family: $font-family;
-$select-font-size: $font-size-md;
-$select-font-weight: $font-weight-light;
+$select-font-size: $text-2;
+$select-font-weight: $font-weight-regular;
 $select-arrow-color: var(--brand-secondary);
 
 $select-multi-max-height: $space-84;
