--- a/src/assets/designSystem/components/molecules/_card.scss
+++ b/src/assets/designSystem/components/molecules/_card.scss
@@ -6,10 +6,10 @@ $card-color: var(--brand-high-emphasis-text-color);
 
 $card-header-image-size: $space-40;
 $card-header-image-border-radius: 50%;
-$card-header-title-font-size: $font-size-md;
+$card-header-title-font-size: $text-2;
 $card-header-title-font-weight: $font-weight-regular;
-$card-header-subtitle-font-size: $font-size-md;
-$card-header-subtitle-font-weight: $font-weight-light;
+$card-header-subtitle-font-size: $text-2;
+$card-header-subtitle-font-weight: $font-weight-regular;
 $card-header-subtitle-color: var(--brand-medium-emphasis-text-color);
 
 $card-body-padding: 0 $space-16 $space-8 $space-16;
