--- a/src/assets/designSystem/components/molecules/_dropdown-menu.scss
+++ b/src/assets/designSystem/components/molecules/_dropdown-menu.scss
@@ -1,10 +1,10 @@
 $dropdown-menu-button-padding: $space-4;
 $dropdown-menu-button-border-radius: var(--brand-border-radius-sm);
 $dropdown-menu-button-font-family: $font-family;
-$dropdown-menu-button-font-size: $font-size-md;
+$dropdown-menu-button-font-size: $text-2;
 $dropdown-menu-button-font-weight: $font-weight-regular;
-$dropdown-menu-button-line-height: $line-height-md;
-$dropdown-menu-button-letter-spacing: $letter-spacing;
+$dropdown-menu-button-line-height: $line-height-2;
+$dropdown-menu-button-letter-spacing: $letter-spacing-1;
 $dropdown-menu-button-border: none;
 $dropdown-menu-button-bg: var(--brand-primary-bg-color);
 $dropdown-menu-button-hover-bg: var(--brand-secondary-bg-color);
@@ -17,9 +17,9 @@ $dropdown-menu-list-color: var(--brand-high-emphasis-text-color);
 $dropdown-menu-list-border: 1px solid var(--brand-primary-border-color);
 $dropdown-menu-list-border-radius: var(--brand-border-radius-sm);
 $dropdown-menu-list-min-width: 200px;
-$dropdown-menu-list-font-size: $font-size-sm;
-$dropdown-menu-list-font-weight: $font-weight-light;
-$dropdown-menu-list-line-height: $line-height-md;
+$dropdown-menu-list-font-size: $text-1;
+$dropdown-menu-list-font-weight: $font-weight-regular;
+$dropdown-menu-list-line-height: $line-height-2;
 $dropdown-menu-list-shadow: var(--brand-elevation-1);
 
 $dropdown-menu-list-item-padding: $space-8 $space-12;
