--- a/src/assets/designSystem/components/organisms/_sidebar.scss
+++ b/src/assets/designSystem/components/organisms/_sidebar.scss
@@ -12,12 +12,12 @@ $sidebar-hamburger-color: var(--brand-high-emphasis-text-color);
 $sidebar-hamburger-open-bg: transparent;
 $sidebar-hamburger-open-color: $sidebar-color;
 
-$sidebar-group-font-weight: $font-weight-light;
-$sidebar-group-font-size: $font-size-md;
+$sidebar-group-font-weight: $font-weight-regular;
+$sidebar-group-font-size: $text-2;
 $sidebar-group-border-bottom: 1px solid var(--brand-primary-border-color);
 
-$sidebar-group-item-font-weight: $font-weight-light;
-$sidebar-group-item-font-size: $font-size-md;
+$sidebar-group-item-font-weight: $font-weight-regular;
+$sidebar-group-item-font-size: $text-2;
 $sidebar-group-item-color: $sidebar-color;
 $sidebar-group-item-hover-color: $sidebar-color;
 $sidebar-group-item-hover-bg: var(--brand-secondary-bg-color);
