feat(components): add layout components (#544)

--- a/src/assets/designSystem/_spacings.scss
+++ b/src/assets/designSystem/_spacings.scss
@@ -1,7 +1,7 @@
 /* General */
 $space-unit: 0.8rem;
 
-/* Spacing */
+/* Spacings */
 $space-2: $space-unit * 0.25; //   2px
 $space-4: $space-unit * 0.5; //    4px
 $space-8: $space-unit; //          8px
