--- a/src/assets/designSystem/_variables.scss
+++ b/src/assets/designSystem/_variables.scss
@@ -4,7 +4,7 @@
 @import 'color-palette';
 @import 'spacings';
 @import 'typo';
-@import 'components/organisms/grid';
+@import 'breakpoints';
 /* Components */
 @import 'components/organisms/accordion';
 @import 'components/organisms/autocomplete';
