--- a/src/assets/designSystem/components/organisms/_calendar.scss
+++ b/src/assets/designSystem/components/organisms/_calendar.scss
@@ -6,7 +6,7 @@
   )
 );
 
-$calendar-max-width: $screen-phone;
+$calendar-max-width: $screen-phone-min;
 $calendar-shadow: none;
 $calendar-bg: var(--brand-primary-bg-color);
 
