--- a/.vuesion/generators/component/component.vue.hbs
+++ b/.vuesion/generators/component/component.vue.hbs
@@ -5,7 +5,7 @@
 </template>
 
 <script lang="ts">
-import { defineComponent } from "@vue/composition-api";
+import { defineComponent } from '@vue/composition-api';
 
 export default defineComponent({
   name: '{{ properCase componentName }}',
