--- a/src/assets/designSystem/_mixins.scss
+++ b/src/assets/designSystem/_mixins.scss
@@ -1,4 +1,4 @@
-@import 'components/organisms/grid';
+@import 'breakpoints';
 
 @mixin background-gradient($start-color, $end-color, $orientation) {
   background: $start-color;
@@ -12,16 +12,16 @@
   }
 }
 
-$grid-breakpoints: (
-  phone: $screen-phone,
-  tabletPortrait: $screen-tablet-portrait,
-  tabletLandscape: $screen-tablet-landscape,
-  smallDesktop: $screen-small-desktop,
-  largeDesktop: $screen-large-desktop,
+$grid-breakpoints-min: (
+  phone: $screen-phone-min,
+  tabletPortrait: $screen-tablet-portrait-min,
+  tabletLandscape: $screen-tablet-landscape-min,
+  smallDesktop: $screen-small-desktop-min,
+  largeDesktop: $screen-large-desktop-min,
 );
 @mixin mediaMin($breakpoint-name) {
-  @if map-has-key($grid-breakpoints, $breakpoint-name) {
-    @media (min-width: #{map_get($grid-breakpoints, $breakpoint-name)}) {
+  @if map-has-key($grid-breakpoints-min, $breakpoint-name) {
+    @media (min-width: #{map_get($grid-breakpoints-min, $breakpoint-name)}) {
       @content;
     }
   } @else {
@@ -40,6 +40,16 @@ $grid-breakpoints-max: (
 @mixin mediaMax($breakpoint-name) {
   @if map-has-key($grid-breakpoints-max, $breakpoint-name) {
     @media (max-width: #{map_get($grid-breakpoints-max, $breakpoint-name)}) {
+      @content;
+    }
+  } @else {
+    @error "breakpoint not supported!";
+  }
+}
+
+@mixin mediaMinMax($breakpoint-name) {
+  @if map-has-key($grid-breakpoints-max, $breakpoint-name) {
+    @media (min-width: #{map_get($grid-breakpoints-min, $breakpoint-name)}) and (max-width: #{map_get($grid-breakpoints-max, $breakpoint-name)}) {
       @content;
     }
   } @else {
