feat(components): add vue-back-to-top

--- a/src/assets/designSystem/_variables.scss
+++ b/src/assets/designSystem/_variables.scss
@@ -1,6 +1,6 @@
 @import 'mixins';
 
-/* Branding */
+/* Foundation */
 @import 'color-palette';
 @import 'spacings';
 @import 'typo';
@@ -31,3 +31,4 @@
 @import 'components/molecules/tooltip';
 @import 'components/atoms/toggle';
 @import 'components/atoms/star-rating';
+@import 'components/molecules/back-to-top';
