feat(components): add vue-pop-over

--- a/src/assets/designSystem/_variables.scss
+++ b/src/assets/designSystem/_variables.scss
@@ -32,3 +32,4 @@
 @import 'components/atoms/toggle';
 @import 'components/atoms/star-rating';
 @import 'components/molecules/back-to-top';
+@import 'components/molecules/pop-over';
